force-app/main/default/objects/WhatsApp_Session__c/WhatsApp_Session__c.object-meta.xml
<CustomObject>
    <description>Tracks WhatsApp conversation sessions between sales reps and the Field Assistant agent. Each record represents a unique phone number&apos;s ongoing conversation, storing the Agentforce session ID for context continuity across messages. Sessions auto-reset after configurable inactivity period.</description>
    <label>WhatsApp Session</label>
    <nameField>
        <displayFormat>WA-{000000}</displayFormat>
        <label>Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>