force-app/main/default/objects/WhatsApp_Session__c/fields/Agent_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Session_ID__c</fullName>
    <label>Agent Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>