force-app/main/default/objects/WhatsApp_Session__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <externalId>true</externalId>
    <label>Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>