force-app/main/default/objects/WhatsApp_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>Agent_Session_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Activity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>